Update company path
